<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="create_session"
        android:enabled="true"
        android:icon="@android:drawable/ic_input_add"
        android:shortcutShortLabel="@string/shortcut_create_session_short"
        android:shortcutLongLabel="@string/shortcut_create_session_long">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.linkease.MainActivity"
            android:targetPackage="com.linkease">
            <extra android:name="action" android:value="create_session" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="show_free_time"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:shortcutShortLabel="@string/shortcut_free_time_short"
        android:shortcutLongLabel="@string/shortcut_free_time_long">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.linkease.MainActivity"
            android:targetPackage="com.linkease">
            <extra android:name="action" android:value="show_free_time" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="show_availability"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_agenda"
        android:shortcutShortLabel="@string/shortcut_availability_short"
        android:shortcutLongLabel="@string/shortcut_availability_long">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.linkease.MainActivity"
            android:targetPackage="com.linkease">
            <extra android:name="action" android:value="show_availability" />
        </intent>
    </shortcut>

</shortcuts>
